@@ -1,3 +1,9 @@
+globus-xio (5.7-1+gt6.@distro@) @distro@; urgency=low
+
+  * more GT-581 tweaks
+
+ -- Globus Toolkit <support@globus.org>  Thu, 12 Feb 2015 21:02:53 -0600
+
 globus-xio (5.6-1+gt6.@distro@) @distro@; urgency=low
 
   * GT-581: Prefer IPV6 address family when creating a listener on all interfaces
